[package]
name = "borrown"
version = "0.1.0"
authors = ["Victor Lopez <victor@codx.io>"]
edition = "2021"
keywords = ["borrowed", "cow", "owned"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/codx-dev/borrown"
description = "Borrowed or owned, simplified for no-std."

[dependencies]
